--- a/CadastroForaDeSessaoAcademia/CadastroForaDeSessaoAcademia-ejb/nbproject/project.properties
+++ b/CadastroForaDeSessaoAcademia/CadastroForaDeSessaoAcademia-ejb/nbproject/project.properties
@@ -21,21 +21,21 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.antlr-2.7.7.jar=lib/antlr-2.7.7.jar
-file.reference.cdi-api-1.1-PFD.jar=lib/cdi-api-1.1-PFD.jar
-file.reference.classmate-1.3.0.jar=lib/classmate-1.3.0.jar
-file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
-file.reference.el-api-2.2.jar=lib/el-api-2.2.jar
-file.reference.geronimo-jta_1.1_spec-1.1.1.jar=lib/geronimo-jta_1.1_spec-1.1.1.jar
-file.reference.hibernate-commons-annotations-5.0.1.Final.jar=lib/hibernate-commons-annotations-5.0.1.Final.jar
-file.reference.hibernate-core-5.2.1.Final.jar=lib/hibernate-core-5.2.1.Final.jar
-file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=lib/hibernate-jpa-2.1-api-1.0.0.Final.jar
-file.reference.jandex-2.0.0.Final.jar=lib/jandex-2.0.0.Final.jar
-file.reference.javassist-3.20.0-GA.jar=lib/javassist-3.20.0-GA.jar
-file.reference.javax.inject-1.jar=lib/javax.inject-1.jar
-file.reference.jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar=lib/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar
-file.reference.jboss-logging-3.3.0.Final.jar=lib/jboss-logging-3.3.0.Final.jar
-file.reference.jsr250-api-1.0.jar=lib/jsr250-api-1.0.jar
+file.reference.antlr-2.7.7.jar=libs/antlr-2.7.7.jar
+file.reference.cdi-api-1.1-PFD.jar=libs/cdi-api-1.1-PFD.jar
+file.reference.classmate-1.3.0.jar=libs/classmate-1.3.0.jar
+file.reference.dom4j-1.6.1.jar=libs/dom4j-1.6.1.jar
+file.reference.el-api-2.2.jar=libs/el-api-2.2.jar
+file.reference.geronimo-jta_1.1_spec-1.1.1.jar=libs/geronimo-jta_1.1_spec-1.1.1.jar
+file.reference.hibernate-commons-annotations-5.0.1.Final.jar=libs/hibernate-commons-annotations-5.0.1.Final.jar
+file.reference.hibernate-core-5.2.1.Final.jar=libs/hibernate-core-5.2.1.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=libs/hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.jandex-2.0.0.Final.jar=libs/jandex-2.0.0.Final.jar
+file.reference.javassist-3.20.0-GA.jar=libs/javassist-3.20.0-GA.jar
+file.reference.javax.inject-1.jar=libs/javax.inject-1.jar
+file.reference.jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar=libs/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar
+file.reference.jsr250-api-1.0.jar=libs/jsr250-api-1.0.jar
+file.reference.postgresql-9.4.1207.jre6.jar=libs/postgresql-9.4.1207.jre6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -64,8 +64,8 @@ javac.classpath=\
     ${file.reference.javassist-3.20.0-GA.jar}:\
     ${file.reference.javax.inject-1.jar}:\
     ${file.reference.jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar}:\
-    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
-    ${file.reference.jsr250-api-1.0.jar}
+    ${file.reference.jsr250-api-1.0.jar}:\
+    ${file.reference.postgresql-9.4.1207.jre6.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
