- Filter input testado.

--- a/Academia/nbproject/project.properties
+++ b/Academia/nbproject/project.properties
@@ -44,7 +44,6 @@ file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=web\\WEB-INF\\libs\\hiberna
 file.reference.jandex-2.0.0.Final.jar=web\\WEB-INF\\libs\\jandex-2.0.0.Final.jar
 file.reference.javassist-3.11.0.GA.jar=web\\WEB-INF\\libs\\javassist-3.11.0.GA.jar
 file.reference.javassist-3.20.0-GA.jar=web\\WEB-INF\\libs\\javassist-3.20.0-GA.jar
-file.reference.jboss-logging-3.3.0.Final.jar=web\\WEB-INF\\libs\\jboss-logging-3.3.0.Final.jar
 file.reference.ognl-3.0.13.jar=web\\WEB-INF\\libs\\ognl-3.0.13.jar
 file.reference.postgresql-9.4.1207.jre6.jar=web\\WEB-INF\\libs\\postgresql-9.4.1207.jre6.jar
 file.reference.struts2-core-2.3.28.jar=web\\WEB-INF\\libs\\struts2-core-2.3.28.jar
@@ -75,16 +74,15 @@ javac.classpath=\
     ${file.reference.freemarker-2.3.22.jar}:\
     ${file.reference.geronimo-jta_1.1_spec-1.1.1.jar}:\
     ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar}:\
-    ${file.reference.hibernate-core-5.1.0.Final.jar}:\
     ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
     ${file.reference.jandex-2.0.0.Final.jar}:\
     ${file.reference.javassist-3.11.0.GA.jar}:\
     ${file.reference.javassist-3.20.0-GA.jar}:\
-    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
     ${file.reference.ognl-3.0.13.jar}:\
     ${file.reference.postgresql-9.4.1207.jre6.jar}:\
     ${file.reference.struts2-core-2.3.28.jar}:\
-    ${file.reference.xwork-core-2.3.28.jar}
+    ${file.reference.xwork-core-2.3.28.jar}:\
+    ${file.reference.hibernate-core-5.1.0.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
