--- a/Academia/nbproject/project.properties
+++ b/Academia/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.geronimo-jta_1.1_spec-1.1.1.jar=web\\WEB-INF\\libs\\geronimo-jta_
 file.reference.hibernate-commons-annotations-5.0.1.Final.jar=web\\WEB-INF\\libs\\hibernate-commons-annotations-5.0.1.Final.jar
 file.reference.hibernate-core-5.1.0.Final.jar=web\\WEB-INF\\libs\\hibernate-core-5.1.0.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=web\\WEB-INF\\libs\\hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.iText7-7.0.0.zip=web\\WEB-INF\\libs\\iText7-7.0.0.zip
 file.reference.jandex-2.0.0.Final.jar=web\\WEB-INF\\libs\\jandex-2.0.0.Final.jar
 file.reference.javassist-3.11.0.GA.jar=web\\WEB-INF\\libs\\javassist-3.11.0.GA.jar
 file.reference.javassist-3.20.0-GA.jar=web\\WEB-INF\\libs\\javassist-3.20.0-GA.jar
@@ -83,7 +84,8 @@ javac.classpath=\
     ${file.reference.struts2-core-2.3.28.jar}:\
     ${file.reference.xwork-core-2.3.28.jar}:\
     ${file.reference.hibernate-core-5.1.0.Final.jar}:\
-    ${file.reference.jboss-logging-3.3.0.Final.jar}
+    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
+    ${file.reference.iText7-7.0.0.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
